Fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-#root { height: 100% }
+#root, #app {
+  height: 100%;
+  min-height: 100%;
+}
+#main { margin-top: 3rem }
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -19,7 +23,7 @@ code {
   height: 3rem;
   padding: 0;
 }
-.ant-menu.ant-menu-inline .ant-menu-item {
+.ant-menu.ant-menu-inline .ant-menu-item, .ant-menu.ant-menu-vertical .ant-menu-item {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -29,7 +33,10 @@ code {
 .ant-layout-content {
   padding: 1.4rem !important
 }
-.ant-menu-title-content .anticon { padding-right: .6rem }
+.ant-menu.ant-menu-inline .ant-menu-title-content .anticon { padding-right: .6rem }
+.ant-menu-inline-collapsed > .ant-menu-item { padding: 0 !important }
+.ant-menu-inline-collapsed .label { display: none !important }
+
 ul.ant-menu-inline-collapsed { width: 60px }
 ul.ant-menu-inline-collapsed > li.ant-menu-item {
   display: flex;
